Se elimina controlador y modelo de lugar_ubicacion
