# swagger/swagger.yml
@@ -241,121 +241,6 @@ paths:
           description: '{string} delete success!'
         "403":
           description: id is empty
-  /lugar_ubicacion/:
-    get:
-      tags:
-      - lugar_ubicacion
-      description: get LugarUbicacion
-      operationId: LugarUbicacionController.Get All
-      parameters:
-      - in: query
-        name: query
-        description: Filter. e.g. col1:v1,col2:v2 ...
-        type: string
-      - in: query
-        name: fields
-        description: Fields returned. e.g. col1,col2 ...
-        type: string
-      - in: query
-        name: sortby
-        description: Sorted-by fields. e.g. col1,col2 ...
-        type: string
-      - in: query
-        name: order
-        description: Order corresponding to each sortby field, if single value, apply
-          to all sortby fields. e.g. desc,asc ...
-        type: string
-      - in: query
-        name: limit
-        description: Limit the size of result set. Must be an integer
-        type: string
-      - in: query
-        name: offset
-        description: Start position of result set. Must be an integer
-        type: string
-      responses:
-        "200":
-          description: ""
-          schema:
-            $ref: '#/definitions/models.LugarUbicacion'
-        "403":
-          description: ""
-    post:
-      tags:
-      - lugar_ubicacion
-      description: create LugarUbicacion
-      operationId: LugarUbicacionController.Post
-      parameters:
-      - in: body
-        name: body
-        description: body for LugarUbicacion content
-        required: true
-        schema:
-          $ref: '#/definitions/models.LugarUbicacion'
-      responses:
-        "201":
-          description: '{int} models.LugarUbicacion'
-        "403":
-          description: body is empty
-  /lugar_ubicacion/{id}:
-    get:
-      tags:
-      - lugar_ubicacion
-      description: get LugarUbicacion by id
-      operationId: LugarUbicacionController.Get One
-      parameters:
-      - in: path
-        name: id
-        description: The key for staticblock
-        required: true
-        type: string
-      responses:
-        "200":
-          description: ""
-          schema:
-            $ref: '#/definitions/models.LugarUbicacion'
-        "403":
-          description: :id is empty
-    put:
-      tags:
-      - lugar_ubicacion
-      description: update the LugarUbicacion
-      operationId: LugarUbicacionController.Put
-      parameters:
-      - in: path
-        name: id
-        description: The id you want to update
-        required: true
-        type: string
-      - in: body
-        name: body
-        description: body for LugarUbicacion content
-        required: true
-        schema:
-          $ref: '#/definitions/models.LugarUbicacion'
-      responses:
-        "200":
-          description: ""
-          schema:
-            $ref: '#/definitions/models.LugarUbicacion'
-        "403":
-          description: :id is not int
-    delete:
-      tags:
-      - lugar_ubicacion
-      description: delete the LugarUbicacion
-      operationId: LugarUbicacionController.Delete
-      parameters:
-      - in: path
-        name: id
-        description: The id you want to delete
-        required: true
-        type: string
-      responses:
-        "200":
-          description: '{string} delete success!'
-        "403":
-          description: id is empty
   /relacion_lugares/:
     get:
       tags:
@@ -848,22 +733,6 @@ definitions:
         type: string
       TipoLugar:
         $ref: '#/definitions/models.TipoLugar'
-  models.LugarUbicacion:
-    title: LugarUbicacion
-    type: object
-    properties:
-      CodigoPostal:
-        type: string
-      Direccion:
-        type: string
-      Estrato:
-        type: integer
-        format: int32
-      Id:
-        type: integer
-        format: int64
-      Lugar:
-        $ref: '#/definitions/models.Lugar'
   models.RelacionLugares:
     title: RelacionLugares
     type: object
@@ -932,9 +801,6 @@ tags:
 - name: tipo_lugar
   description: |
     TipoLugarController operations for TipoLugar
-- name: lugar_ubicacion
-  description: |
-    LugarUbicacionController operations for LugarUbicacion
 - name: atributo_lugar
   description: |
     AtributoLugarController operations for AtributoLugar
